samples/_failures_safe/1761431063_09142c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0542401.c: In function ‘main’:
./samples/SAFE/__tmp_c0542401.c:152:5: error: expected declaration or statement at end of input
  152 |     analyze_logs(entries, count);
      |     ^~~~~~~~~~~~
